# fyn-api

./: .dockerignore  .env  .gitignore  Dockerfile  docker-compose.yml  install.sh  manage.py  pyproject.toml  requirements.txt  setup_developement_server.sh  start_server.sh
.ebextensions/: django.config
.github/workflows/: aws_deploy.yml  docker-publish.yml  publish_to_pypi.yml
accounts/migrations/: 0001_initial.py  0002_alter_user_id.py
accounts/static/: styles.css
accounts/templates/: account_manager.html  master.html
apps/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
apps/application_registry/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/job_manager/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/runner_manager/: admin.py  apps.py  authentication.py  consumers.py  models.py  permissions.py  routing.py  serializers.py  urls.py  views.py
apps/simulation_manager/: admin.py  models.py  urls.py  views.py
backend/: settings.py  urls.py  views.py
docs/: global_systems_design.drawio  project_overview.md
fyn-api/: asgi.py  serializer.py  settings.py  urls.py  views.py  wsgi.py
settings/: settings.py  settings_rest.py  settings_security.py  settings_storage.py  settings_websocket.py
simulation_manager/: apps.py  models.py  urls.py  views.py
simulation_manager/migrations/: 0001_initial.py  0002_simulation_created_by.py  (+2 more)
templates/: master.html
yaml_files/: 5b77429c-7c1f-4551-b986-9f19195b901a_simulation.yaml  fields_H9M0U3F.yaml  fields_paxxNCS.yaml
(+46 files in other folders)
